corrected positioning of top right. added grid function for top right no text wrap for morgan oakley top right started bot left adding greetingbar info set up grid for bot left adjusting positioning for bot left

--- a/admin-dashboard.css
+++ b/admin-dashboard.css
@@ -123,7 +123,7 @@ body {
     grid-row: 1 / 2 ;
     box-shadow: 0 8px 6px -6px darkgray;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 50%);
 }
 
 .searchbar {
@@ -152,9 +152,12 @@ body {
     height: 100%;
 }
 
+.topright {
+    display:grid;
+}
+
 .profilebar {
     display:grid;
-    grid-column: 3 / 4;
     place-self:center;
     grid-template-columns: 25% 25% 1fr;
     gap: 5%;
@@ -165,6 +168,39 @@ body {
     height: 30px;
     width: auto;
     place-self:center;
+}
+
+.profilebar > p {
+    margin: 0%;
+    text-wrap: nowrap;
+}
+
+.botleft {
+    display:grid;
+}
+
+.greetingbar {
+    display:grid;
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+    place-self: center;
+    grid-template-columns: 25% 1fr;
+    grid-template-rows: repeat(2, 1fr);
+    gap: 5%;
+}
+
+.greetingbar > img {
+    grid-column: 1 / 2;
+    grid-row: 1 / 3;
+    background-color:black;
+    height: 30px;
+    width: auto;
+    place-self:center;
+}
+
+.greetingbar > p {
+    margin:0%;
+
 }
 
 /* .main {
